--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300&family=Secular+One&display=swap');
 h1 {
   font-family: 'Secular One', sans-serif;
+  font-size: 45px;
+  text-transform: capitalize;
 }
 
 body {
@@ -22,6 +24,26 @@ header h1 {
   margin-left: 0%;
   margin-right: 0%;
   padding-top: 45px;
+}
+
+article {
+  background-color:  rgba(194,	192,	148, 0.5);
+  padding: 15px;
+ 
+}
+
+H2 {
+  font-family: 'Secular One', sans-serif;
+  color:#69140E; 
+  font-weight: bold;
+  margin-top: 50px;
+}
+
+article h3 {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  color: #69140E;
+  font-weight: bold;
+
 }
 
 #page-2-header {
@@ -54,6 +76,7 @@ header h1 {
     text-decoration: none;
     font-size: 17px;
     font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: bold;
   
  }
   
